# vehicle-dispatch-api

./: .gitignore  CLEANUP_PLAN.md  Procfile  README.md  api_only.py  app.py  pyproject.toml  requirements.txt  simpler_processor.py
Files/: 18_24.Desp_reg.xls  Desp_regENDMAY2025.xls  Product List - Sheet1.csv  Sales Report CHANGAN- APRIL 2025.xlsx
Files/output/: Changan_Sales_Format_June_2025.xlsx  Dispatch Report 05 - 2025.xlsx  Dispatch Report 05 - 2025_fixed.xlsx  Dispatch Report 06 - 2025.xlsx  Dispatch Report 25 - 05.xlsx  Maxus_Dispatch_Format_June_2025.xlsx  Vehicle_Dispatch_Report_June_2025.xlsx
archive/: analyze_fixed_file.py  app.py  app_fixed.py  custom_format_processor.py  fast_app.py  fix_engine_case.py  geely_engine_analyzer.py  minimal_test.py  processor.py  sample_data_analyzer.py  simple_app.py  test_app.py  test_processing.py
archive/instance/: site 2.db  site.db
archive/static/: dark.css  ibm.css
archive/templates/: base.html  index.html  login.html  register.html  results.html
templates/: index.html
